--- a/index.html
+++ b/index.html
@@ -3,7 +3,198 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Beauty Zone</title>
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/fonts.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav>
+        <a class="logo-link" href="#">beauty zone</a>
+        <ul>
+          <li>
+            <a class="navigation-link" href="#section-about_us">Про нас</a>
+          </li>
+          <li>
+            <a class="navigation-link" href="#section-choose_us">Чому ми</a>
+          </li>
+          <li>
+            <a class="navigation-link" href="#section-procedures"
+              >Наші процедури</a
+            >
+          </li>
+          <li>
+            <a class="navigation-link" href="#section-location">Контакти</a>
+          </li>
+          <li>
+            <a href="#"> <!-- call icon --></a>
+          </li>
+          <li>
+            <a href="#"> <!-- facebook icon --></a>
+          </li>
+          <li>
+            <a href="#"> <!-- instagram icon --></a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section>
+        <p>Косметологічна клініка</p>
+        <h1 class="hero-title">beauty zone</h1>
+        <button class="button" type="button">Замовити дзвінок</button>
+        <p class="consultation-text">
+          Запишись та отримай безкоштовну консультацію нашого косметолога
+        </p>
+      </section>
+      <section id="section-about_us">
+        <h2 class="section-title">
+          Перевтілюйтесь в <span>Beauty Zone!</span>
+        </h2>
+        <p class="about_us-text">
+          Наша косметологічна клініка пропонує вам професійні послуги з догляду
+          за шкірою обличчя та тіла.
+        </p>
+        <p class="about_us-text">
+          B <span>beauty zone</span> ми гарантуємо найвищі стандарти якості та
+          приємний сервіс. Наші косметологічні процедури та препарати допоможуть
+          вам підтримувати свою красу та молодість. З нами краса назавжди!
+        </p>
+      </section>
+      <section id="section-choose_us">
+        <h2 class="section-title">Чому люди <span>обирають нас</span></h2>
+        <ul>
+          <li>
+            <article>
+              <a href="#"><!-- icon call --></a>
+              <p class="choose_us-text">
+                Всі наші косметологи мають вищу медичну освіту та стаж роботи
+                від 5 років
+              </p>
+            </article>
+          </li>
+          <li>
+            <article>
+              <a href="#"><!-- icon facebook--></a>
+              <p class="choose_us-text">
+                Використовуємо тільки професійне обладнання та косметику,
+                перевірену часом
+              </p>
+            </article>
+          </li>
+          <li>
+            <article>
+              <a href="#"><!-- icon instagram--></a>
+              <p class="choose_us-text">
+                Наша мета - підкреслити переваги та приховати недоліки, а не
+                переробити
+              </p>
+            </article>
+          </li>
+        </ul>
+      </section>
+      <section id="section-procedures">
+        <h2 class="section-title">Наші <span>процедури</span></h2>
+        <ul>
+          <li>
+            <article>
+              <!-- img -->
+              <p class="procedures-text">Маски для обличчя</p>
+            </article>
+          </li>
+          <li>
+            <article>
+              <!-- img -->
+              <p class="procedures-text">Маски для обличчя</p>
+            </article>
+          </li>
+          <li>
+            <article>
+              <!-- img -->
+              <p class="procedures-text">Маски для обличчя</p>
+            </article>
+          </li>
+        </ul>
+      </section>
+      <section id="section-location">
+        <h2 class="section-title">Як нас <span>знайти</span></h2>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.939883433875!2d30.51325798977685!3d50.44222041471427!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cef8b5f6338d%3A0x25c7f06ad686451c!2z0LHRg9C7LiDQotCw0YDQsNGB0LAg0KjQtdCy0YfQtdC90LrQviwgNSwg0JrQuNC10LIsIDAyMDAw!5e0!3m2!1sru!2sua!4v1735050730243!5m2!1sru!2sua"
+          width="605"
+          height="481"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+        >
+        </iframe>
+        <h3 class="location-text">
+          Запишіться <span>безкоштовно</span> та отримайте подарунок
+        </h3>
+      </section>
+      <!-- form -->
+      <button class="button" type="button">Записатись безкоштовно</button>
+      <p class="text-confidentiality">
+        Натискаючи на кнопку я погоджуюсь
+        <a class="link-confidentiality" href="#">
+          з політикою конфіденційності
+        </a>
+      </p>
+    </main>
+    <footer>
+      <nav>
+        <a class="logo-link" href="#"> beauty zone </a>
+        <ul>
+          <li><a class="address-link" href="#section-about_us">Про нас</a></li>
+          <li><a class="address-link" href="#section-choose_us">Чому ми</a></li>
+          <li>
+            <a class="address-link" href="#section-procedures"
+              >Наші процедури</a
+            >
+          </li>
+          <li><a class="address-link" href="#section-location">Контакти</a></li>
+        </ul>
+      </nav>
+      <address>
+        <ul>
+          <li>
+            <a class="address-link" href="tel:+380960000007"
+              >+ 38 (096) 000 00 07</a
+            >
+          </li>
+          <li>
+            <a class="address-link" href="mailto:beautyzone@gmail.com"
+              >beautyzone@gmail.com</a
+            >
+          </li>
+          <li>
+            <a
+              class="address-link"
+              href="https://maps.app.goo.gl/iBnq4KgNmCW5urpf8"
+              target="_blank"
+              >Україна, м. Київ, вул. Тараса Шевченка 5</a
+            >
+          </li>
+          <li>
+            <a href="#">
+              <!-- icon call -->
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <!-- icon facebook -->
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <!-- icon instagram -->
+            </a>
+          </li>
+        </ul>
+        <a class="address-link" href="#" target="_blank">
+          Політика конфіденційності
+        </a>
+        <p class="address-copyright">&copy; 2022 Дані захищені</p>
+      </address>
+    </footer>
+  </body>
 </html>
