--- a/index.html
+++ b/index.html
@@ -212,7 +212,9 @@
     <footer>
       <div class="container">
         <nav>
-          <a class="logo-link" href="#"> beauty zone </a>
+          <a class="logo-link" href="#"
+            ><img src="./img/logo.svg" alt="Логотип Beaty Zone"
+          /></a>
           <ul>
             <li>
               <a class="address-link" href="#section-about_us">Про нас</a>
@@ -250,29 +252,29 @@
                 >Україна, м. Київ, вул. Тараса Шевченка 5</a
               >
             </li>
-            <ul class="footer-menu-icons">
-              <li>
-                <a href="#">
-                  <svg class="menu-icon" width="32" height="32">
-                    <use href="./img/icons.svg#icon-call"></use>
-                  </svg>
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  <svg class="menu-icon" width="32" height="32">
-                    <use href="./img/icons.svg#icon-facebook"></use>
-                  </svg>
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  <svg class="menu-icon" width="32" height="32">
-                    <use href="./img/icons.svg#icon-instagram"></use>
-                  </svg>
-                </a>
-              </li>
-            </ul>
+          </ul>
+          <ul class="footer-menu-icons">
+            <li>
+              <a href="#">
+                <svg class="menu-icon" width="32" height="32">
+                  <use href="./img/icons.svg#icon-call"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <svg class="menu-icon" width="32" height="32">
+                  <use href="./img/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <svg class="menu-icon" width="32" height="32">
+                  <use href="./img/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
           </ul>
           <a class="address-link" href="#" target="_blank">
             Політика конфіденційності
