--- a/index.html
+++ b/index.html
@@ -145,142 +145,151 @@
           <h2 class="section-title pocedures-centered">
             Наші <span>процедури</span>
           </h2>
-          <button class="carousel-button" type="button">
-            <svg width="16" height="16">
-              <use href="./img/icons.svg#icon-Arrow"></use>
-            </svg>
-          </button>
-          <ul class="procedures-list">
-            <li class="procedures-item">
-              <article class="procedures-card">
-                <!-- img -->
-                <h3 class="procedures-text">Маски для обличчя</h3>
-              </article>
-            </li>
-            <li class="procedures-item">
-              <article class="procedures-card">
-                <!-- img -->
-                <h3 class="procedures-text">Маски для обличчя</h3>
-              </article>
-            </li>
-            <li class="procedures-item">
-              <article class="procedures-card">
-                <!-- img -->
-                <h3 class="procedures-text">Маски для обличчя</h3>
-              </article>
-            </li>
-          </ul>
-          <button class="carousel-button" type="button">
-            <svg width="16" height="16">
-              <use href="./img/icons.svg#icon-Arrow"></use>
-            </svg>
-          </button>
+          <div class="procedures-container">
+            <button class="carousel-button" type="button">
+              <svg width="16" height="16">
+                <use href="./img/icons.svg#icon-Arrow"></use>
+              </svg>
+            </button>
+            <ul class="procedures-list">
+              <li class="procedures-item">
+                <article class="procedures-card">
+                  <!-- img -->
+                  <h3 class="procedures-text">Маски для обличчя</h3>
+                </article>
+              </li>
+              <li class="procedures-item">
+                <article class="procedures-card">
+                  <!-- img -->
+                  <h3 class="procedures-text">Маски для обличчя</h3>
+                </article>
+              </li>
+              <li class="procedures-item">
+                <article class="procedures-card">
+                  <!-- img -->
+                  <h3 class="procedures-text">Маски для обличчя</h3>
+                </article>
+              </li>
+            </ul>
+            <button class="carousel-button" type="button">
+              <svg width="16" height="16">
+                <use href="./img/icons.svg#icon-Arrow"></use>
+              </svg>
+            </button>
+          </div>
         </div>
       </section>
-      <section class="section" id="section-location">
+      <section class="section section-location" id="section-location">
         <div class="container">
           <h2 class="section-title location-title-centered">
             Як нас <span>знайти</span>
           </h2>
-          <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.939883433875!2d30.51325798977685!3d50.44222041471427!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cef8b5f6338d%3A0x25c7f06ad686451c!2z0LHRg9C7LiDQotCw0YDQsNGB0LAg0KjQtdCy0YfQtdC90LrQviwgNSwg0JrQuNC10LIsIDAyMDAw!5e0!3m2!1sru!2sua!4v1735050730243!5m2!1sru!2sua"
-            width="605"
-            height="481"
-            allowfullscreen=""
-            loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"
-          >
-          </iframe>
-          <h3 class="location-text">
-            Запишіться <span>безкоштовно</span> та отримайте подарунок
-          </h3>
-        </div>
-      </section>
-      <!-- form -->
-      <section class="section">
-        <div class="container">
-          <button class="button" type="button">Записатись безкоштовно</button>
-          <p class="text-confidentiality">
-            Натискаючи на кнопку я погоджуюсь
-            <a class="link-confidentiality" href="#">
-              з політикою конфіденційності
-            </a>
-          </p>
+          <div class="location-container">
+            <iframe
+              class="location-map"
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.939883433875!2d30.51325798977685!3d50.44222041471427!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cef8b5f6338d%3A0x25c7f06ad686451c!2z0LHRg9C7LiDQotCw0YDQsNGB0LAg0KjQtdCy0YfQtdC90LrQviwgNSwg0JrQuNC10LIsIDAyMDAw!5e0!3m2!1sru!2sua!4v1735050730243!5m2!1sru!2sua"
+              width="605"
+              height="481"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+            >
+            </iframe>
+            <div class="location_form-container">
+              <h3 class="location-text">
+                Запишіться <span>безкоштовно</span> та отримайте подарунок
+              </h3>
+              <!-- form -->
+              <button class="button" type="button">
+                Записатись безкоштовно
+              </button>
+              <p class="text-confidentiality">
+                Натискаючи на кнопку я погоджуюсь
+                <a class="link-confidentiality" href="#">
+                  з політикою конфіденційності
+                </a>
+              </p>
+            </div>
+          </div>
         </div>
       </section>
     </main>
     <footer>
       <div class="container">
-        <nav>
-          <a class="logo-link" href="#"
-            ><img src="./img/logo.svg" alt="Логотип Beaty Zone"
-          /></a>
-          <ul>
-            <li>
-              <a class="address-link" href="#section-about_us">Про нас</a>
-            </li>
-            <li>
-              <a class="address-link" href="#section-choose_us">Чому ми</a>
-            </li>
-            <li>
-              <a class="address-link" href="#section-procedures"
-                >Наші процедури</a
-              >
-            </li>
-            <li>
-              <a class="address-link" href="#section-location">Контакти</a>
-            </li>
-          </ul>
-        </nav>
-        <address>
-          <ul>
-            <li>
-              <a class="address-link" href="tel:+380960000007"
-                >+ 38 (096) 000 00 07</a
-              >
-            </li>
-            <li>
-              <a class="address-link" href="mailto:beautyzone@gmail.com"
-                >beautyzone@gmail.com</a
-              >
-            </li>
-            <li>
-              <a
-                class="address-link"
-                href="https://maps.app.goo.gl/iBnq4KgNmCW5urpf8"
-                target="_blank"
-                >Україна, м. Київ, вул. Тараса Шевченка 5</a
-              >
-            </li>
-          </ul>
-          <ul class="footer-menu-icons">
-            <li>
-              <a href="#">
-                <svg class="menu-icon" width="32" height="32">
-                  <use href="./img/icons.svg#icon-call"></use>
-                </svg>
+        <div class="footer-container">
+          <nav class="footer-nav">
+            <div class="footer-logo">
+              <a class="logo-link" href="#">
+                <img src="./img/logo.svg" alt="Логотип Beaty Zone" />
               </a>
-            </li>
-            <li>
-              <a href="#">
-                <svg class="menu-icon" width="32" height="32">
-                  <use href="./img/icons.svg#icon-facebook"></use>
-                </svg>
+            </div>
+            <ul class="footer-menu">
+              <li>
+                <a class="address-link" href="#section-about_us">Про нас</a>
+              </li>
+              <li>
+                <a class="address-link" href="#section-choose_us">Чому ми</a>
+              </li>
+              <li>
+                <a class="address-link" href="#section-procedures"
+                  >Наші процедури</a
+                >
+              </li>
+              <li>
+                <a class="address-link" href="#section-location">Контакти</a>
+              </li>
+            </ul>
+          </nav>
+          <address class="footer-address">
+            <ul class="address-list">
+              <li>
+                <a class="address-link" href="tel:+380960000007"
+                  >+ 38 (096) 000 00 07</a
+                >
+              </li>
+              <li>
+                <a class="address-link" href="mailto:beautyzone@gmail.com"
+                  >beautyzone@gmail.com</a
+                >
+              </li>
+              <li>
+                <a
+                  class="address-link"
+                  href="https://maps.app.goo.gl/iBnq4KgNmCW5urpf8"
+                  target="_blank"
+                  >Україна, м. Київ, вул. Тараса Шевченка 5</a
+                >
+              </li>
+              <li>
+                <a href="#">
+                  <svg class="menu-icon" width="32" height="32">
+                    <use href="./img/icons.svg#icon-call"></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <svg class="menu-icon" width="32" height="32">
+                    <use href="./img/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <svg class="menu-icon" width="32" height="32">
+                    <use href="./img/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+            <div class="address-info">
+              <a class="address-link" href="#" target="_blank">
+                Політика конфіденційності
               </a>
-            </li>
-            <li>
-              <a href="#">
-                <svg class="menu-icon" width="32" height="32">
-                  <use href="./img/icons.svg#icon-instagram"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
-          <a class="address-link" href="#" target="_blank">
-            Політика конфіденційності
-          </a>
-          <p class="address-copyright">&copy; 2022 Дані захищені</p>
-        </address>
+              <p class="address-copyright">&copy; 2022 Дані захищені</p>
+            </div>
+          </address>
+        </div>
       </div>
     </footer>
   </body>
